Results/spots/t2.micro/us-east-1/2d3b0539915e6696d83066553d52276d2937abfe/secGroup.json
{
    "IpPermissionsEgress": [
        {
            "IpProtocol": "-1", 
            "PrefixListIds": [], 
            "IpRanges": [
                {
                    "CidrIp": "0.0.0.0/0"
                }
            ], 
            "UserIdGroupPairs": [], 
            "Ipv6Ranges": []
        }
    ], 
    "Description": "temporary sec group", 
    "IpPermissions": [
        {
            "PrefixListIds": [], 
            "FromPort": 22, 
            "IpRanges": [
                {
                    "CidrIp": "0.0.0.0/0"
                }
            ], 
            "ToPort": 22, 
            "IpProtocol": "tcp", 
            "UserIdGroupPairs": [], 
            "Ipv6Ranges": [
                {
                    "CidrIpv6": "::/0"
                }
            ]
        }
    ], 
    "GroupName": "temp-time-mes", 
    "VpcId": "vpc-3fe3f044", 
    "OwnerId": "530329064002", 
    "GroupId": "sg-0ec31461aa6642d57"
}
